--- a/css/pricing_styles_zh.css
+++ b/css/pricing_styles_zh.css
@@ -1641,7 +1641,7 @@ body.modal-open .card.frozen::after {
 
     html body #modal-container .modal:not(#modal-terms) .modal-content .modal-body {
         max-height: calc(100dvh - 108px) !important;
-        padding-top: 4px !important;
+        padding-top: 24px !important;
     }
 
     html body #modal-container .modal:not(#modal-terms) .modal-content .modal-body > :first-child {
@@ -1681,7 +1681,7 @@ body.modal-open .card.frozen::after {
 
     html body #modal-container #modal-terms .modal-content .modal-body {
         max-height: calc(100dvh - 70px) !important;
-        padding-top: 4px !important;
+        padding-top: 24px !important;
     }
 
     html body #modal-container #modal-terms .modal-content .modal-body > :first-child {
